force-app/main/default/objects/FAP_Customization__c/FAP_Customization__c.object-meta.xml
<CustomObject>
    <description>To store the fields data that are added to Search page of Find a Partner</description>
    <label>FAP Customization</label>
    <nameField>
        <label>APIName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FAP Customizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>