force-app/main/default/objects/FAP_Customization__c/fields/Datatype__c.field-meta.xml
<CustomField>
    <fullName>Datatype__c</fullName>
    <label>Datatype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Textbox</fullName>
            </value>
            <value>
                <fullName>Dropdown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>