force-app/main/default/objects/FAP_Customization__c/fields/Field_label__c.field-meta.xml
<CustomField>
    <fullName>Field_label__c</fullName>
    <label>Field label</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>