force-app/main/default/objects/FAP_Customization__c/fields/Help_text__c.field-meta.xml
<CustomField>
    <fullName>Help_text__c</fullName>
    <label>Help text</label>
    <length>150</length>
    <type>Text</type>
</CustomField>