force-app/main/default/objects/FAP_Customization__c/fields/Is_Multiselect__c.field-meta.xml
<CustomField>
    <fullName>Is_Multiselect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Multiselect?</label>
    <type>Checkbox</type>
</CustomField>