force-app/main/default/objects/FAP_Customization__c/fields/Pick_list_value__c.field-meta.xml
<CustomField>
    <fullName>Pick_list_value__c</fullName>
    <label>Pick list value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>