force-app/main/default/objects/FAP_Customization__c/fields/User_type__c.field-meta.xml
<CustomField>
    <fullName>User_type__c</fullName>
    <label>User type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Authenticated</fullName>
            </value>
            <value>
                <fullName>Un-authenticated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>