force-app/main/default/objects/FAP_Customization__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>User_type__c</columns>
    <columns>Datatype__c</columns>
    <columns>Field_label__c</columns>
    <columns>Location__c</columns>
    <columns>Pick_list_value__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>